0026601: Visualization, Ray Tracing - make Path Tracing results reproducible for the same camera position

OpenGl_View - reset Random Number Generator seed on progressive render restart
to produce the same visual results.